# C-Qt-Task-Manager-App-View-and-Kill-System-Processes-macOS-

./: CMakeLists.txt  README.md
BackEnd/: TaskManager.h
BackEnd/GetProcesses/: GetProcesses.cpp  GetProcesses.h
BackEnd/Processes/: Proceses.cpp  Proceses.hpp
FrontEnd/: main.cpp
FrontEnd/MainWindow/: MainWindow.cpp  MainWindow.hpp
